Refactor file structure and complete scroll logic and start game logic

--- a/style.css
+++ b/style.css
@@ -522,6 +522,6 @@ button::after {
   background-color: black;
   bottom: 450px;
   text-align: start;
-  width: 100%;
   overflow: hidden;
+  text-wrap: nowrap;
 }
