--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import "./animation.css";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+TC:wght@500&display=swap");
 
 * {
   margin: 0;
