--- a/style.css
+++ b/style.css
@@ -129,15 +129,15 @@ button::after {
 }
 
 .replayBut::after {
-  content: "alt+r";
+  content: "replay";
 }
 
 .nextBut::after {
-  content: "tab";
+  content: "next";
 }
 
 .settingBut::after {
-  content: "alt+/";
+  content: "Setting";
 }
 
 .wordmark,
@@ -387,6 +387,7 @@ button::after {
   z-index: 1;
   transform: translateY(-50%);
   min-width: 400px;
+  opacity: 1;
 }
 
 .butCon {
@@ -458,6 +459,7 @@ button::after {
   background-color: rgba(0, 0, 0, 0);
   color: #777;
   cursor: pointer;
+  transition: all 0.15s ease-in;
 }
 
 .settingCon button.selected {
@@ -506,4 +508,62 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+#autoDeleteUnderlineSetting h1::after,
+#autoCorrectSetting h1::after {
+  content: "BETA";
+  color: #777;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "Noto Sans TC";
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  margin-left: 5px;
+}
+
+html.inGame .butCon {
+  opacity: 0;
+}
+html.inGame .wordmark {
+  opacity: 0.2;
+}
+
+html.settingOpening .replayBut,
+html.settingOpening .nextBut {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.blur {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 600px;
+  height: 240px;
+  flex-shrink: 0;
+  background: linear-gradient(
+    90deg,
+    rgba(53, 53, 53, 0) 0%,
+    rgba(53, 53, 53, 0.75) 50%,
+    #353535 75%,
+    #353535 100%
+  );
+  z-index: 2000;
+}
+
+.blurRight {
+  right: 0;
+}
+
+.blurLeft {
+  left: 0;
+  transform: translateY(-50%) rotateY(180deg);
+}
+
+.settingBut.settingOn::after {
+  content: "Close";
 }
