--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@
   box-sizing: border-box;
 }
 
+.bbn {
+  color: #f4f3f1;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "Bebas Neue";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.2px;
+}
+
 .nst {
   font-family: "Noto Sans TC", sans-serif;
   font-optical-sizing: auto;
@@ -25,7 +37,6 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: #353535;
-  clip-path: inset(0 0 0 0);
 }
 
 .wordmark {
@@ -185,24 +196,6 @@ button::after {
 .unfocusedCon img {
   width: 32px;
   height: 32px;
-}
-
-.resultCon {
-  cursor: default;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(0%, -50%);
-  height: max-content;
-  width: max-content;
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  gap: 50px;
-  margin-left: 61px;
-  transition: all 0.2s ease-in;
 }
 
 .hud {
@@ -469,6 +462,7 @@ button::after {
 
 .settingCon button.disable {
   cursor: not-allowed;
+  opacity: 0.5;
 }
 
 .settingCon button.withInput {
@@ -566,4 +560,108 @@ html.settingOpening .nextBut {
 
 .settingBut.settingOn::after {
   content: "Close";
+}
+
+.resultCon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 420px;
+  height: 160px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: start;
+  align-content: space-between;
+  color: #777;
+  flex-shrink: 0;
+  gap: 10px;
+}
+
+.resultItem {
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: start;
+}
+
+.resultItem h1 {
+  color: #777;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "Noto Sans TC";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 1.2px;
+}
+
+.resultCon h1 {
+  color: #777;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "Noto Sans TC";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 1.2px;
+}
+
+.resultCon p {
+  color: #f4f3f1;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "Bebas Neue";
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 3.2px;
+}
+
+.resultCon label {
+  color: #777;
+  font-family: "Noto Sans TC";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.75px;
+}
+
+.resultItem p {
+  color: #f4f3f1;
+  font-family: "Bebas Neue";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.2px;
+}
+
+#modeResult {
+  color: #f4f3f1;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: "Noto Sans TC";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.9px;
+}
+
+/* For debugging */
+.mainTextCon {
+  opacity: 0 !important;
+}
+
+.mandarinInput {
+  opacity: 0 !important;
 }
