--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import "./animation.css";
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+TC:wght@500&display=swap");
 
 * {
@@ -171,6 +170,15 @@ button::after {
 
 .spinner {
   animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* Footer */
